alterações para adição de playlists