@@ -2,8 +2,10 @@ package com.soundscape.soundscape.song;
 
 import java.io.File;
 import java.io.IOException;
+import java.util.Date;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.apache.commons.io.IOUtils;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -15,6 +17,7 @@ import com.mpatric.mp3agic.Mp3File;
 import com.soundscape.soundscape.artist.ArtistModel;
 import com.soundscape.soundscape.artist.ArtistRepository;
 import com.soundscape.soundscape.audiofile.AudioFileModel;
+import com.soundscape.soundscape.audiofile.AudioFileRepository;
 import com.soundscape.soundscape.song.dto.SongDTO;
 import com.soundscape.soundscape.song.dto.SongUploadDTO;
 
@@ -27,10 +30,14 @@ public class SongService {
     @Autowired
     private ArtistRepository artistRepository;
 
-    public ResponseEntity<String> saveSongWithAudio(Long artistId, SongUploadDTO songData) throws IOException {
+    @Autowired
+    private AudioFileRepository audioFileRepository;
+
+    public ResponseEntity<String> saveSongWithAudio(String userName, SongUploadDTO songData) throws IOException {
         try {
-            ArtistModel artist = artistRepository.findById(artistId)
+            ArtistModel artist = artistRepository.findByName(userName)
                     .orElseThrow(() -> new IllegalArgumentException("Artist not found"));
+            Date currentDate = new Date();
 
             String originalAudioFileName = songData.getAudioFile().getOriginalFilename();
             String audioFileExtension = originalAudioFileName.substring(originalAudioFileName.lastIndexOf("."));
@@ -44,7 +51,10 @@ public class SongService {
             audioFileModel.setFileName(uniqueAudioFileName);
             audioFileModel.setFilePath(audioFilePath);
             audioFileModel.setSize(songData.getAudioFile().getSize());
+            audioFileModel.setCreationDate(currentDate);
 
+            audioFileRepository.save(audioFileModel);
+            
             Mp3File mp3File = new Mp3File(audioFilePath);
             long durationInSeconds = mp3File.getLengthInSeconds();
 
@@ -56,6 +66,7 @@ public class SongService {
             songModel.setArtist(artist);
             songModel.setLength(durationInSeconds);
             songModel.setImageData(imageData);
+            songModel.setCreationDate(currentDate);
 
             songRepository.save(songModel);
 
@@ -65,12 +76,19 @@ public class SongService {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Failed to upload song and image: " + e.getMessage());
         }
     }
-    
+
     public byte[] getSongImage(Long songId) {
     	return this.songRepository.findById(songId).get().getImageData();
     }
 
     public List<SongDTO> listAll() {
-    	return this.songRepository.findAll().stream().map(song -> new SongFactory().buildDTO(song)).toList();
+    	return this.songRepository.findAllWithoutImageDataOrderByCreationDate();
+    }
+
+    public List<SongDTO> searchSongs(String searchTerm) {
+        List<SongModel> foundSongs = songRepository.searchByTitleOrArtistName(searchTerm);
+        
+        return foundSongs.stream().map(song -> new SongFactory().buildDTO(song))
+                .collect(Collectors.toList());
     }
 }
